Add Content Links section to dashboard

--- a/index.html
+++ b/index.html
@@ -449,6 +449,33 @@
         </section>
 
         <section>
+            <h2 class="section-title">🎬 Content Links</h2>
+            <div class="projects-grid" style="grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));">
+                <a href="https://www.youtube.com/channel/UC4Y6O0ubwl0_ZQsLq2EteTQ/shorts" target="_blank" class="project-card" style="text-decoration: none; cursor: pointer;">
+                    <div class="project-header">
+                        <div class="project-icon" style="background: rgba(255, 0, 0, 0.2);">📺</div>
+                        <span class="project-name">YouTube Shorts</span>
+                    </div>
+                    <p style="color: var(--text-secondary);">View all uploaded quiz videos and dubbed content</p>
+                </a>
+                <a href="https://github.com/asaadbalum2/TrendMerch/releases" target="_blank" class="project-card" style="text-decoration: none; cursor: pointer;">
+                    <div class="project-header">
+                        <div class="project-icon" style="background: rgba(255, 107, 53, 0.2);">👕</div>
+                        <span class="project-name">Design Gallery</span>
+                    </div>
+                    <p style="color: var(--text-secondary);">Browse all generated T-shirt designs</p>
+                </a>
+                <a href="https://github.com/asaadbalum2/QuizBot-Shorts/actions" target="_blank" class="project-card" style="text-decoration: none; cursor: pointer;">
+                    <div class="project-header">
+                        <div class="project-icon" style="background: rgba(0, 255, 136, 0.2);">⚙️</div>
+                        <span class="project-name">Workflow Logs</span>
+                    </div>
+                    <p style="color: var(--text-secondary);">View detailed run logs and output</p>
+                </a>
+            </div>
+        </section>
+
+        <section>
             <h2 class="section-title">📋 Recent Workflow Runs</h2>
             <div class="activity-list" id="activity-list">
                 <div class="loading"><div class="spinner"></div></div>
