Add API health status section

--- a/index.html
+++ b/index.html
@@ -359,6 +359,16 @@
             <strong>📊 YouTube Quota:</strong> 10,000 units/day = ~6 videos. Currently using 1 channel. With multiple channels + quota increase, can scale to 50+ videos/day!
         </div>
 
+        <div id="api-health-section" style="margin: 1rem 0;">
+            <div class="schedule-note" id="api-health-status">
+                <strong>🔑 API Health:</strong> <span id="api-health-text">Checking APIs...</span>
+            </div>
+            <div id="api-alerts" style="display: none; background: rgba(255, 0, 80, 0.1); border: 1px solid rgba(255, 0, 80, 0.3); border-radius: 10px; padding: 1rem; margin-top: 0.5rem; font-size: 0.85rem;">
+                <strong style="color: #ff0080;">⚠️ API Issues Detected:</strong>
+                <ul id="api-issues-list" style="margin: 0.5rem 0 0 1rem; color: var(--text-secondary);"></ul>
+            </div>
+        </div>
+
         <section>
             <h2 class="section-title">🚀 Active Projects</h2>
             <div class="projects-grid">
