chore: Rename QuizBot-Shorts to ViralShorts-Factory

--- a/explainer.html
+++ b/explainer.html
@@ -116,7 +116,7 @@
             height: 4px;
         }
 
-        .project.quizbot::before { background: var(--accent-3); }
+        .project.viralshorts::before { background: var(--accent-3); }
         .project.globaldub::before { background: var(--accent-2); }
         .project.trendmerch::before { background: #ff6b35; }
 
@@ -366,7 +366,7 @@
         <section>
             <h2>🎬 Project 1: ViralShorts Factory</h2>
             
-            <div class="project quizbot">
+            <div class="project viralshorts">
                 <div class="project-header">
                     <span class="project-icon">🎬</span>
                     <span class="project-name">ViralShorts Factory</span>
