Update dashboard with new features and platform quotas

--- a/index.html
+++ b/index.html
@@ -356,7 +356,10 @@
         </div>
 
         <div class="quota-info">
-            <strong>📊 YouTube Quota:</strong> 10,000 units/day = ~6 videos. Currently using 1 channel. With multiple channels + quota increase, can scale to 50+ videos/day!
+            <strong>📊 Platform Quotas:</strong><br>
+            • <strong>YouTube:</strong> 10,000 units/day = ~6 videos/channel<br>
+            • <strong>Dailymotion:</strong> ~50 uploads/day (free tier - way more than YouTube!)<br>
+            <span style="color: var(--accent-purple);">💡 Same content → 2x reach with minimal extra effort!</span>
         </div>
 
         <div id="api-health-section" style="margin: 1rem 0;">
@@ -380,19 +383,28 @@
                         <span class="project-status status-active" id="viralshorts-status">Active</span>
                     </div>
                     <p style="color: var(--text-secondary); margin-bottom: 1rem;">
-                        AI-generated viral videos: Would You Rather, Facts, Motivation & more
+                        AI-powered viral videos: Psychology Facts, Money Tips, Life Hacks, Scary Facts & more
                     </p>
                     <div class="project-stats">
                         <div class="project-stat">
                             <div class="project-stat-value">6</div>
-                            <div class="project-stat-label">Scheduled Runs/Day</div>
+                            <div class="project-stat-label">Runs/Day (YouTube)</div>
                         </div>
                         <div class="project-stat">
-                            <div class="project-stat-value">2</div>
-                            <div class="project-stat-label">Platforms (YT + DM)</div>
+                            <div class="project-stat-value">50</div>
+                            <div class="project-stat-label">Max DM Uploads</div>
                         </div>
                     </div>
-                    <p style="color: var(--text-secondary); font-size: 0.8rem;">📈 Analytics feedback loop learns from views to improve content!</p>
+                    <div style="background: rgba(0, 255, 136, 0.1); border-radius: 8px; padding: 0.75rem; margin: 0.75rem 0; font-size: 0.8rem;">
+                        <strong style="color: var(--accent-green);">✨ Features:</strong>
+                        <ul style="margin: 0.25rem 0 0 1rem; color: var(--text-secondary);">
+                            <li>God-tier AI prompts for viral content</li>
+                            <li>SEO-optimized titles & hashtags</li>
+                            <li>Real Google Trends integration</li>
+                            <li>Anti-ban system (random delays, fingerprinting)</li>
+                            <li>Analytics feedback loop for learning</li>
+                        </ul>
+                    </div>
                     <div class="project-links">
                         <a href="https://www.youtube.com/channel/UC4Y6O0ubwl0_ZQsLq2EteTQ" target="_blank" class="project-link">📺 YouTube</a>
                         <a href="https://www.dailymotion.com/asaadbalum2" target="_blank" class="project-link">📹 Dailymotion</a>
